RESOLVED FIXED268027
[JSC] eval() function from another realm shouldn't cause direct eval call
https://bugs.webkit.org/show_bug.cgi?id=268027
Summary [JSC] eval() function from another realm shouldn't cause direct eval call
Alexey Shvayka
Reported 2024-01-24 12:54:13 PST
Related test262 failure: * test/language/expressions/call/eval-realm-indirect.js
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-24 12:54:45 PST
Alexey Shvayka
Comment 2 2024-01-24 13:10:41 PST
EWS
Comment 3 2024-01-30 12:58:38 PST
Committed 273782@main (4737a82b02bd): <https://commits.webkit.org/273782@main> Reviewed commits have been landed. Closing PR #23188 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.